--- a/partials/home.html
+++ b/partials/home.html
@@ -1,1 +1,8 @@
-<div style="height:500px;">Home</div>
+<div uib-carousel active="active" interval="myInterval" no-wrap="noWrapSlides">
+    <div uib-slide ng-repeat="slide in slides track by slide.id" index="slide.id">
+        <img ng-src="{{slide.image}}">
+        <div class="carousel-caption">
+            <h3 ng-bind="::slide.heading"></h3>
+        </div>
+    </div>
+</div>
