Tried profile of Ambani

--- a/partials/about.html
+++ b/partials/about.html
@@ -1,1 +1,43 @@
-<div style="height:500px;">About</div>
+<div id="about" style="padding-top: 15px; padding-bottom: 15px" class="clearfix col-md-12 col-sm-12 col-xs-12">
+    <div class="row" style="margin-bottom: 15px">
+        <div class="col-md-6 col-sm-12 col-xs-12">
+            <img src="css/images/ambani_main.png">
+        </div>
+        <div class="col-md-6 col-sm-12 col-xs-12">
+            <div class="" style="text-align: left">
+                <h2 style="color: #999; white-space: pre-wrap" class="text-center">THE MAN WHO DARE TO DREAM</h2>
+                <p>
+                Fiery instinct, futuristic outlook, indomitable will, and a burning passion was all that Dhirubhai Ambani had when he set out to work his way for a living in the lanes of Bombay, way back in 1958. From being a spice dealer to a cloth merchant to a textile producer, it was his overarching ambition, inexhaustible energy and never-say-die spirit that led him through all the obstacles to emerge as the business tycoon of India. He established and laid the foundation for Reliance Industries, which has become one of the largest conglomerates of India today. It was through his futuristic vision and strong business acumen that Reliance Industries created history in the Indian industry, a legacy that would serve as an inspiration for generations to come! Dhirubhai Ambani’s life is surely the rags to riches story, as he took one step at a time to become one of the industrial giants of the country. Fuelled by an aim to ‘Think Big, Think Differently, Think Fast and Think Ahead’ his capacities in the entrepreneurial sector were in stark contrast with his competitors, as he promised his dealers a deal that was revolutionary, ‘profit we share, losses are mine’.</p>
+            </div>
+        </div>
+    </div>
+    <!--<div class="row">
+        <div ng-click="gotoAnchor('childhood')" class="col-md-4 col-sm-6 col-xs-12">
+            <div class="single-service">
+                <div class="number">
+                    <p>1</p>
+                </div>
+                <h4>Childhood</h4>
+                <p>Dihrubhai Ambani was born in a Modh baniya family to Hirachand Govardhandas Ambani and Jamanaben in the village of Chorwad in the district of Juna...</p>
+            </div>
+        </div>
+        <div class="col-md-4 col-sm-6 col-xs-12">
+            <div class="single-service">
+                <div class="number">
+                    <p>2</p>
+                </div>
+                <h4>Career</h4>
+                <p>At Aden, he took up a clerical job at A. Besse & Co, the largest transcontinental trading firm east of Suez. The company dealt with trading all sorts of goo...</p>
+            </div>
+        </div>
+        <div class="col-md-4 col-sm-6 col-xs-12">
+            <div class="single-service">
+                <div class="number">
+                    <p>3</p>
+                </div>
+                <h4>Works</h4>
+                <p>He was the mastermind, the initiator, conceptualizer and the visualizer behind Reliance Group. Starting off as a mere yarn dealer, he wrote history by estab...</p>
+            </div>
+        </div>
+    </div>-->
+</div>
