--- a/partials/home.html
+++ b/partials/home.html
@@ -1,8 +1,8 @@
 <div uib-carousel active="active" interval="myInterval" no-wrap="noWrapSlides">
     <div uib-slide ng-repeat="slide in slides track by slide.id" index="slide.id">
         <img ng-src="{{slide.image}}">
-        <div class="carousel-caption">
+        <!--<div class="carousel-caption">
             <h3 ng-bind="::slide.heading"></h3>
-        </div>
+        </div>-->
     </div>
 </div>
