--- a/css/style.css
+++ b/css/style.css
@@ -11,9 +11,22 @@ body {
     position: relative;
 }
 
+.page-title {
+    font-size: 20px;
+}
+
+.page-title strong {
+    color: #2a87cd;
+}
+
 .navbar-default {
     background-color: #252525;
     padding: 8px 0;
+    border-color: #252525;
+}
+
+.navbar-default .navbar-brand {
+    color: #ffffff;
 }
 
 .navbar {
@@ -25,7 +38,7 @@ body {
 }
 
 #header .nav li:hover a, #header .nav li.active a {
-    background-color: #F2784B;
+    background-color: #2a87cd;
     border-radius: 25px 0;
 }
 /*=======================
@@ -96,3 +109,84 @@ img {
     width: 100%;
     height: auto;
 }
+
+a.left.carousel-control,
+a.right.carousel-control {
+    display: none;
+}
+
+#about{
+	background:#f5f5f5;
+}
+#about .single-service {
+	text-align: center;
+	background: #fff;
+	padding: 30px;
+	position: relative;
+	-webkit-box-shadow: 1px 1px 6px rgba(20, 20, 20, 0.4);
+	-moz-box-shadow: 1px 1px 6px rgba(20, 20, 20, 0.4);
+	box-shadow: 1px 1px 6px rgba(20, 20, 20, 0.4);
+}
+#about .single-service .number{
+	font-size: 28px;
+	line-height: 65px;
+	height: 65px;
+	width: 65px;
+	background: #252525;
+	border-radius: 50%;
+	text-align: center;
+	display:inline-block;
+	border:1px solid transparent;
+}
+#about .single-service .number p {
+	color: #fff;
+	margin:0;
+}
+#about .single-service:hover .number p{
+	-webkit-transform:scale(1.4);
+	-moz-transform:scale(1.4);
+	transform:scale(1.4);
+} 
+#about .single-service h4 {
+	font-size: 18px;
+	font-weight: 700;
+	margin: 14px 0;
+}
+
+
+/*#about .single-service.active h4,
+#about .single-service:hover h4{
+	color:#fff;
+}
+#about .single-service.active p,
+#about .single-service:hover p{
+	color:#fff;
+}
+#about .single-service:hover i,
+#about .single-service.active i{
+	color: #fff;
+	background:transparent;
+	border-color:#fff;
+}
+#about .single-service .ico-bg {
+	position: absolute;
+	content: "";
+	color: #988D8D;
+	font-size: 50px;
+	background: transparent;
+	left: 0;
+	top: 50%;
+	bottom: 33px;
+	z-index: 3;
+	border: none;
+	transition: all 1s ease;
+	opacity: 0;
+	visibility: hidden;
+}
+#about .single-service:hover .ico-bg,
+#about .single-service.active .ico-bg{
+	color: #fff;
+	left:20%;
+	opacity: 0.3;
+	visibility:visible;
+}*/
