Added angular-bootstrap lightbox plugin.

--- a/partials/about.html
+++ b/partials/about.html
@@ -5,8 +5,8 @@
         </div>
         <div class="col-md-6 col-sm-12 col-xs-12">
             <div class="" style="text-align: left">
-                <h2 style="color: #999; white-space: pre-wrap" class="text-center">THE MAN WHO DARE TO DREAM</h2>
-                <p>
+                <h2 style="color: #999; margin-bottom: 0;" class="text-center">THE MAN WHO DARE TO DREAM</h2>
+                <p style="color: #666; letter-spacing:0.5px; white-space: pre-wrap">
                 Fiery instinct, futuristic outlook, indomitable will, and a burning passion was all that Dhirubhai Ambani had when he set out to work his way for a living in the lanes of Bombay, way back in 1958. From being a spice dealer to a cloth merchant to a textile producer, it was his overarching ambition, inexhaustible energy and never-say-die spirit that led him through all the obstacles to emerge as the business tycoon of India. He established and laid the foundation for Reliance Industries, which has become one of the largest conglomerates of India today. It was through his futuristic vision and strong business acumen that Reliance Industries created history in the Indian industry, a legacy that would serve as an inspiration for generations to come! Dhirubhai Ambani’s life is surely the rags to riches story, as he took one step at a time to become one of the industrial giants of the country. Fuelled by an aim to ‘Think Big, Think Differently, Think Fast and Think Ahead’ his capacities in the entrepreneurial sector were in stark contrast with his competitors, as he promised his dealers a deal that was revolutionary, ‘profit we share, losses are mine’.</p>
             </div>
         </div>
