--- a/partials/footer.html
+++ b/partials/footer.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="clearfix container">
     <div class="row">
         <div class="col-md-6 col-sm-6 col-xs-12">
             <div class="copyright">
