Added childhood details.

--- a/partials/about.html
+++ b/partials/about.html
@@ -1,5 +1,5 @@
 <div id="about" style="padding-top: 15px; padding-bottom: 15px" class="clearfix col-md-12 col-sm-12 col-xs-12">
-    <div class="row" style="margin-bottom: 15px">
+    <div class="row">
         <div class="col-md-6 col-sm-12 col-xs-12">
             <img src="css/images/ambani_main.png">
         </div>
