--- a/partials/gallery.html
+++ b/partials/gallery.html
@@ -1,6 +1,6 @@
 <div id="gallery" class="clearfix col-md-12 col-sm-12 col-xs-12" style="padding: 15px;">
     <div class="text-center">
-        <h2 style="color: #333; font-weight: 700; margin-top: 0; margin-bottom: 15px;">IMAGE GALLERY</h2>
+        <h2 style="color: #ffffff; font-weight: 700; margin-top: 0; margin-bottom: 15px;">IMAGE GALLERY</h2>
     </div>
     <div class="row">
         <div class="col-md-3 col-sm-3 col-xs-6" ng-repeat="image in images">
