--- a/partials/childhood.html
+++ b/partials/childhood.html
@@ -1,10 +1,86 @@
-<!--<div id="childhood" style="padding-top:15px; padding-bottom:15px; background-color: #ffffff" class="clearfix col-md-12 col-sm-12 col-xs-12">
-    <div class="row" style="margin-bottom: 15px">
-        <div class="col-md-12 col-sm-12 col-xs-12">
-            <div class="single-service" style="text-align: left">
-                <h4>About Dhirubhai Ambani</h4>
-                Fiery instinct, futuristic outlook, indomitable will, and a burning passion was all that Dhirubhai Ambani had when he set out to work his way for a living in the lanes of Bombay, way back in 1958. From being a spice dealer to a cloth merchant to a textile producer, it was his overarching ambition, inexhaustible energy and never-say-die spirit that led him through all the obstacles to emerge as the business tycoon of India. He established and laid the foundation for Reliance Industries, which has become one of the largest conglomerates of India today. It was through his futuristic vision and strong business acumen that Reliance Industries created history in the Indian industry, a legacy that would serve as an inspiration for generations to come! Dhirubhai Ambani’s life is surely the rags to riches story, as he took one step at a time to become one of the industrial giants of the country. Fuelled by an aim to ‘Think Big, Think Differently, Think Fast and Think Ahead’ his capacities in the entrepreneurial sector were in stark contrast with his competitors, as he promised his dealers a deal that was revolutionary, ‘profit we share, losses are mine’. It was through his zeal, bonhomie and invincible spirit of conquering the universe that he transformed his men from clay into steel and helped them attain the pinnacle of success.
+<div id="childhood" class="clearfix col-md-12 col-sm-12 col-xs-12">
+    <div class="text-center">
+        <h2 style="color: #333; font-weight: 700; margin-top: 0; margin-bottom: 15px;">CHILDHOOD AND CAREER</h2>
+    </div>
+    <div class="row">
+        <div class="col-12 col-md-6 col-lg-4">
+            <div class="box">
+                <div class="thumbs-container">
+                    <div class="thumbs-image-container">
+                        <img src="css/images/1932.png">
+                    </div>
+                </div>
+                <h4 class="text-center">1932</h3>
+                <p>He was born in a Modh baniya family to Hirachand Govardhandas Ambani and Jamanaben in the village of Chorwad in the district of Junagarh. His father was employed as a school teacher while his mother was a homemaker.
+                </p>
+            </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4">
+            <div class="box">
+                <div class="thumbs-container">
+                    <div class="thumbs-image-container">
+                        <img src="http://drop.ndtv.com/albums/BUSINESS/dhirubhai/ril1.jpg">
+                    </div>
+                </div>
+                <h4 class="text-center">1949 - 1962</h3>
+                <p>In 1949 He went to Aden (now Yemen) in search of opportunity, and worked as a dispatch clerk for A. Besse. A couple of years later, the company became a distributor for Shell products and Dhirubhai was promoted to manage the company's oil-filling station at the port of Aden. It was here that he dreamed of setting up and owning a refinery, which he later realized with his petrochemicals venture.
+                In 1962, He identified an emerging opportunity in yarn trading and shifted to the new business.
+                In 1965, Champaklal Damani and Dhirubhai Ambani ended their partnership and Dhirubhai started on his own.
+                </p>
+            </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4">
+            <div class="box">
+                <div class="thumbs-container">
+                    <div class="thumbs-image-container">
+                        <img src="http://drop.ndtv.com/albums/BUSINESS/dhirubhai/ril3.jpg">
+                    </div>
+                </div>
+                <h4 class="text-center">1963 - 1977</h3>
+                <p>Three years later, he changed the name of his company to Reliance Textile Industries. In 1966, he purchased land in Naroda, Gujarat, to set up a textile mill.
+                In 1977, the company went public. Dhirubhai's decision to prefer the capital markets over banks as the primary source of funding for his ambitious expansion plans, was as daring as it was unprecedented.
+                Dhirubhai is credited with starting the equity cult in India. More than 58,000 investors from various parts of India subscribed to Reliance's IPO in 1977.
+                </p>
+            </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4">
+            <div class="box">
+                <div class="thumbs-container">
+                    <div class="thumbs-image-container">
+                        <img src="http://drop.ndtv.com/albums/BUSINESS/dhirubhai/ril5.jpg">
+                    </div>
+                </div>
+                <h4 class="text-center">1980- 1991 </h3>
+                <p>In the early 80s, he had taken the first important step in strategic backward integration for Reliance with the commissioning of the Patalganga plant which initially manufactured polyester filament yarn and polyester staple fibre.
+                In 1991, he set up Reliance Hazira, for the manufacture of petrochemicals—the next link in the backward integration chain. At the time, Reliance Hazira represented the single largest investment made by a private sector group in India at a single location.
+                </p>
+            </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4">
+            <div class="box">
+                <div class="thumbs-container">
+                    <div class="thumbs-image-container">
+                        <img src="http://drop.ndtv.com/albums/BUSINESS/dhirubhai/ril6.jpg">
+                    </div>
+                </div>
+                <h4 class="text-center">1999 </h3>
+                <p>Dhirubhai had firmed up plans of setting up a massive grassroots refinery—the next big leap in his overall strategic roadmap for Reliance. Conceived as the world's largest grassroots refinery at the time, Jamnagar in Gujarat was to have an annual capacity of 27 million tonnes. In the face of formidable challenges, including a massive cyclone that flattened the project site mid-way through construction, Reliance commissioned the Jamnagar facility in 1999.
+                </p>
+            </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4">
+            <div class="box">
+                <div class="thumbs-container">
+                    <div class="thumbs-image-container">
+                        <img src="http://drop.ndtv.com/albums/BUSINESS/dhirubhai/ril7.jpg">
+                    </div>
+                </div>
+                <h4 class="text-center">2002</h3>
+                <p>In 2002, reliance entered the infocom business and went on to trigger a revolution in mobile telephony
+                    He wanted Reliance to spearhead a communications revolution that would dramatically cut down the cost of connectivity, and propel India into the digital age. His ultimate ambition: To make the cost of a phone call cheaper than that of a post card. It was therefore entirely logical for Reliance to enter the telecommunications space when the sector was opened up for private participation in the 1990s.
+                    In 2002, Reliance made its first discovery of oil & gas in the KG-D6 block.
+                </p>
             </div>
         </div>
     </div>
-</div>-->
+</div>
