Added ng-repeat for childhood page

--- a/partials/childhood.html
+++ b/partials/childhood.html
@@ -3,83 +3,18 @@
         <h2 style="color: #333; font-weight: 700; margin-top: 0; margin-bottom: 15px;">CHILDHOOD AND CAREER</h2>
     </div>
     <div class="row">
-        <div class="col-12 col-md-6 col-lg-4">
+        <div ng-repeat="image in timelineImages" class="col-12 col-md-6 col-lg-4">
             <div class="box">
-                <div class="thumbs-container">
+                <div class="thumbs-container" ng-click="openLightboxModal('timeline', $index)">
                     <div class="thumbs-image-container">
-                        <img src="css/images/1932.png">
+                        <img ng-src="{{image.thumbUrl}}">
                     </div>
                 </div>
-                <h4 class="text-center">1932</h3>
-                <p>He was born in a Modh baniya family to Hirachand Govardhandas Ambani and Jamanaben in the village of Chorwad in the district of Junagarh. His father was employed as a school teacher while his mother was a homemaker.
-                </p>
-            </div>
-        </div>
-        <div class="col-12 col-md-6 col-lg-4">
-            <div class="box">
-                <div class="thumbs-container">
-                    <div class="thumbs-image-container">
-                        <img src="http://drop.ndtv.com/albums/BUSINESS/dhirubhai/ril1.jpg">
-                    </div>
+                <h4 class="text-center" ng-bind="image.year"></h3>
+                <p ng-bind="image.description"></p>
+                <div class="text-right">
+                    <a>Read More...</a>
                 </div>
-                <h4 class="text-center">1949 - 1962</h3>
-                <p>In 1949 He went to Aden (now Yemen) in search of opportunity, and worked as a dispatch clerk for A. Besse. A couple of years later, the company became a distributor for Shell products and Dhirubhai was promoted to manage the company's oil-filling station at the port of Aden. It was here that he dreamed of setting up and owning a refinery, which he later realized with his petrochemicals venture.
-                In 1962, He identified an emerging opportunity in yarn trading and shifted to the new business.
-                In 1965, Champaklal Damani and Dhirubhai Ambani ended their partnership and Dhirubhai started on his own.
-                </p>
-            </div>
-        </div>
-        <div class="col-12 col-md-6 col-lg-4">
-            <div class="box">
-                <div class="thumbs-container">
-                    <div class="thumbs-image-container">
-                        <img src="http://drop.ndtv.com/albums/BUSINESS/dhirubhai/ril3.jpg">
-                    </div>
-                </div>
-                <h4 class="text-center">1963 - 1977</h3>
-                <p>Three years later, he changed the name of his company to Reliance Textile Industries. In 1966, he purchased land in Naroda, Gujarat, to set up a textile mill.
-                In 1977, the company went public. Dhirubhai's decision to prefer the capital markets over banks as the primary source of funding for his ambitious expansion plans, was as daring as it was unprecedented.
-                Dhirubhai is credited with starting the equity cult in India. More than 58,000 investors from various parts of India subscribed to Reliance's IPO in 1977.
-                </p>
-            </div>
-        </div>
-        <div class="col-12 col-md-6 col-lg-4">
-            <div class="box">
-                <div class="thumbs-container">
-                    <div class="thumbs-image-container">
-                        <img src="http://drop.ndtv.com/albums/BUSINESS/dhirubhai/ril5.jpg">
-                    </div>
-                </div>
-                <h4 class="text-center">1980- 1991 </h3>
-                <p>In the early 80s, he had taken the first important step in strategic backward integration for Reliance with the commissioning of the Patalganga plant which initially manufactured polyester filament yarn and polyester staple fibre.
-                In 1991, he set up Reliance Hazira, for the manufacture of petrochemicals—the next link in the backward integration chain. At the time, Reliance Hazira represented the single largest investment made by a private sector group in India at a single location.
-                </p>
-            </div>
-        </div>
-        <div class="col-12 col-md-6 col-lg-4">
-            <div class="box">
-                <div class="thumbs-container">
-                    <div class="thumbs-image-container">
-                        <img src="http://drop.ndtv.com/albums/BUSINESS/dhirubhai/ril6.jpg">
-                    </div>
-                </div>
-                <h4 class="text-center">1999 </h3>
-                <p>Dhirubhai had firmed up plans of setting up a massive grassroots refinery—the next big leap in his overall strategic roadmap for Reliance. Conceived as the world's largest grassroots refinery at the time, Jamnagar in Gujarat was to have an annual capacity of 27 million tonnes. In the face of formidable challenges, including a massive cyclone that flattened the project site mid-way through construction, Reliance commissioned the Jamnagar facility in 1999.
-                </p>
-            </div>
-        </div>
-        <div class="col-12 col-md-6 col-lg-4">
-            <div class="box">
-                <div class="thumbs-container">
-                    <div class="thumbs-image-container">
-                        <img src="http://drop.ndtv.com/albums/BUSINESS/dhirubhai/ril7.jpg">
-                    </div>
-                </div>
-                <h4 class="text-center">2002</h3>
-                <p>In 2002, reliance entered the infocom business and went on to trigger a revolution in mobile telephony
-                    He wanted Reliance to spearhead a communications revolution that would dramatically cut down the cost of connectivity, and propel India into the digital age. His ultimate ambition: To make the cost of a phone call cheaper than that of a post card. It was therefore entirely logical for Reliance to enter the telecommunications space when the sector was opened up for private participation in the 1990s.
-                    In 2002, Reliance made its first discovery of oil & gas in the KG-D6 block.
-                </p>
             </div>
         </div>
     </div>
