--- a/partials/gallery.html
+++ b/partials/gallery.html
@@ -3,8 +3,8 @@
         <h2 style="color: #ffffff; font-weight: 700; margin-top: 0; margin-bottom: 15px;">IMAGE GALLERY</h2>
     </div>
     <div class="row">
-        <div class="col-md-3 col-sm-3 col-xs-6" ng-repeat="image in images">
-            <div class="thumbs-container" ng-click="openLightboxModal($index)">
+        <div class="col-md-3 col-sm-3 col-xs-6" ng-repeat="image in galleryImages">
+            <div class="thumbs-container" ng-click="openLightboxModal('gallery', $index)">
                 <div class="thumbs-image-container">
                 <img ng-src="{{image.thumbUrl}}">
             </div>
