--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,126 @@
+
+@font-face {
+    font-family: 'brandon-grotesque'; /*a name to be used later*/
+    src: url('fonts/Brandon-Grotesque/Brandon_reg.otf'); /*URL to font*/
+}
+@font-face {
+    font-family: 'brandon-grotesque-bold'; /*a name to be used later*/
+    src: url('fonts/Brandon-Grotesque/Brandon_bld.otf'); /*URL to font*/
+}
+@font-face {
+    font-family: 'brandon-grotesque-extra-bold'; /*a name to be used later*/
+    src: url('fonts/Brandon-Grotesque/Brandon_blk.otf'); /*URL to font*/
+}
+@font-face {
+    font-family: 'brandon-grotesque-thin'; /*a name to be used later*/
+    src: url('fonts/Brandon-Grotesque/Brandon_thin.otf'); /*URL to font*/
+}
 body {
-    background: #fff;
-    color: #252525;
-    font-family: 'Roboto', sans-serif;
-    font-size: 15px;
-    font-weight: 300;
-    letter-spacing: 1px;
-    line-height: 26px;
-    margin-top: 60px;
+    font: 14px 'Open Sans', sans-serif;
+    font-weight: normal;
+    font-style: normal;
+    line-height: 23px;
+    color: #727272;
     position: relative;
 }
 
+.site-wrapper {
+    width: 100%;
+    margin: 0 auto 0 auto;
+}
+
+#topbar {
+    background-color: #fd602c;
+    height: 45px;
+    line-height: 45px;
+    color: white;
+}
+
+ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+#topbar li {
+    float: left;
+    text-align: right;
+    font-size: 14px;
+    margin: 0px;
+    padding: 0 10px 0 10px;
+}
+
+#topbar li a {
+    color: white;
+}
+
+#header {
+    height: 80px;
+    background: #fff;
+    padding: 0;
+    width: 100%;
+    z-index: 999;
+}
+
+.navbar-default {
+    border-color: #e7e7e7;
+    border: none;
+}
+
+.navbar {
+    margin-bottom: 0;
+}
+
+.navbar-header {
+    height: 80px;
+    line-height: 80px;
+    color: black;
+    font-size: 30px;
+}
+
+.navbar-brand {
+    float: left;
+    font-size: 18px;
+    height: 50px;
+    line-height: 20px;
+    padding: 21px 0 0;
+}
+
+.navbar-nav > li > a {
+    padding-bottom: 30px;
+    padding-top: 30px;
+    text-transform: uppercase;
+}
+
+#header .nav li:hover a, #header .nav li.active a {
+    color: #fd602c;
+    /*border-bottom: 3px solid #fd602c;*/
+}
+
+.logo-image {
+    width: 50px;
+    height: 50px;
+    border-radius: 100%;
+}
+
+.font-size-13px {
+	font-size: 13px;
+}
+
+.font-size-15px {
+	font-size: 15px;
+}
+
+.nopadding {
+    padding: 0 !important;
+    margin: 0 !important;
+}
+
+.uppercase {
+    text-transform: uppercase;
+}
+
 .logo-container {
-    display: inline-block;
     margin-top: -15px;
 }
 
@@ -21,101 +130,174 @@ body {
     border-radius: 100%;
 }
 
-.page-title {
-    font-size: 20px;
+/*about [Start]*/
+
+.sec-padding {
+    padding: 80px 0;
 }
 
-.page-title strong {
-    color: #2a87cd;
+.bmargin {
+    margin-bottom: 0px;
 }
 
-.navbar-default {
-    background-color: #252525;
-    padding: 8px 0;
-    border-color: #252525;
+h3.less-mar2 {
+    margin-bottom: 5px;
 }
 
-.navbar-default .navbar-brand {
-    color: #ffffff;
+.michroma {
+    font-family: 'Michroma', sans-serif;
 }
 
-.navbar {
-    margin-bottom: 0;
+.personal-info {
+    width: 100%;
+    padding: 0px;
+    margin: 0px;
+    float: left;
 }
 
-#header li a {
-	color: #ffffff;
+.personal-info li {
+    color: #fd602c;
+    padding-bottom: 8px;
 }
 
-#header .nav li:hover a, #header .nav li.active a {
-    background-color: #2a87cd;
-    border-radius: 25px 0;
+.personal-info li i {
+    margin-right: 10px;
 }
+
+.section-title-5 {
+    font-weight: normal;
+    font-size: 26px;
+}
+
+.title-line-5 {
+    width: 100%;
+    padding: 0px;
+    text-align: center;
+    margin: 0 auto 60px auto;
+}
+
+.section-light {
+    background-color: #f6f6f6;
+}
+
+.text-box.padding-3 {
+    padding: 30px;
+}
+
+.text-box.white {
+    background-color: #fff;
+}
+
+.icon-plain-large.right, .icon-plain-medium.right, .icon-plain-small.right, .icon-plain-msmall.right, .icon-plain-tiny.right {
+    float: right;
+    margin: 0px 0px 0px 20px;
+}
+
+.icon-plain-msmall {
+    font-size: 32px;
+    color: #242424;
+    transition: all 0.3s ease-out 0s;
+}
+
+.text-orange-4 {
+    color: #fd602c;
+}
+
+.text-box-left.less-padding-1 {
+    padding: 0px 70px 0px 0;
+}
+
+.text-box-left {
+    display: block;
+    padding: 0px 90px 0px 0;
+    margin: 0px;
+    text-align: right;
+}
+
+.col-divider-margin-3 {
+    width: 100%;
+    float: left;
+    margin-top: 30px;
+}
+/*about [End]*/
+.mask {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    display: block;
+    z-index: 4;
+    width: 100%;
+    background: #000;
+    opacity: .3;
+}
+
+.image-caption {
+	position: absolute;
+    right: 0%;
+    top: 45%;
+    left: 0%;
+    z-index: 10;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    color: #fff;
+    text-align: center;
+}
+
 /*=======================
   Footer CSS
 =========================*/
-#footer {
-	background: #252525;
-	border-top: 1px solid rgba(221, 221, 221, 0.22);
-	padding: 10px 0;
+footer {
+    background: #fd602c;
+    width: 100%;
+    padding: 50px 0;
+    position: relative;
 }
-#footer .copyright{
-	padding:5px 0;
-	float:left;
+
+footer h5 {
+    font-size: 14px;
+    color: #FFF;
+    text-transform: uppercase;
+    margin: 0 0 30px;
+    font-weight: 800;
 }
-#footer .copyright p{
-	color:#fff;
-	margin:0;
+
+footer .connect {
+    width: 100%;
+    float: left;
+    margin-bottom: 20px;
 }
-#footer .copyright span{
-	margin:0px 5px;
+
+footer .connect li {
+    float: left;
+    margin-right: 35px;
+    display: block;
 }
-#footer .social {
-	float: right;
-	margin-top: 5px;
+
+footer .connect li a {
+    display: block;
+    color: #FFF;
+    font-size: 30px;
 }
-#footer .social li {
-	display: inline-block;
-	margin-right: 10px;
-	color:#bbb;
-	font-weight:500;
+
+footer .copyright {
+    margin-top: 50px;
 }
-#footer .social li:last-child{
-	margin-right:0;
+
+footer .copyright p {
+    font-size: 13px;
+    color: #fff;
 }
-#footer .social a {
-	display: block;
-	width: 26px;
-	height: 26px;
-	line-height: 26px;
-	text-align: center;
-	color: #fff;
-	border-radius: 100%;
-	border:1px solid transparent;
+
+.usefulLinks li a, .contact li a, .contact li {
+    color: #fff;
 }
-#footer .social li:hover a{
-	background:transparent;
-}
-#footer .social li:hover a i{
-	opacity: 0;
-    -webkit-animation-name: hvr-icon-drop;
-    animation-name: hvr-icon-drop;
-    -webkit-animation-duration: 0.5s;
-    animation-duration: 0.5s;
-    -webkit-animation-delay: 0.3s;
-    animation-delay: 0.3s;
-    -webkit-animation-fill-mode: forwards;
-    animation-fill-mode: forwards;
-    -webkit-animation-timing-function: ease-in-out;
-    animation-timing-function: ease-in-out;
-    -webkit-animation-timing-function: cubic-bezier(0.52, 1.64, 0.37, 0.66);
-    animation-timing-function: cubic-bezier(0.52, 1.64, 0.37, 0.66);
-}
+
 /*=======================
   End Footer CSS
 =========================*/
 
-img {
+#header img {
     width: 100%;
     height: auto;
 }
@@ -163,57 +345,11 @@ a.right.carousel-control {
 	margin: 14px 0;
 }
 
-
-/*#about .single-service.active h4,
-#about .single-service:hover h4{
-	color:#fff;
-}
-#about .single-service.active p,
-#about .single-service:hover p{
-	color:#fff;
-}
-#about .single-service:hover i,
-#about .single-service.active i{
-	color: #fff;
-	background:transparent;
-	border-color:#fff;
-}
-#about .single-service .ico-bg {
-	position: absolute;
-	content: "";
-	color: #988D8D;
-	font-size: 50px;
-	background: transparent;
-	left: 0;
-	top: 50%;
-	bottom: 33px;
-	z-index: 3;
-	border: none;
-	transition: all 1s ease;
-	opacity: 0;
-	visibility: hidden;
-}
-#about .single-service:hover .ico-bg,
-#about .single-service.active .ico-bg{
-	color: #fff;
-	left:20%;
-	opacity: 0.3;
-	visibility:visible;
-}*/
-
-#gallery {
-    background: url(images/gallery-background.jpg) repeat-y;
-    background-size: cover;
-    background-color: #000;
-    width: 100%;
-}
-
 .thumbs-container {
     padding: 5px;
     background-color: #fff;
     border: 1px solid #ddd;
-    border-radius: 4px;
-    margin-bottom: 15px;
+    margin-bottom: 30px;
 }
 .thumbs-image-container {
     height: 250px;
@@ -236,4 +372,12 @@ a.right.carousel-control {
     -moz-transition: .5s;
     -webkit-transition: .5s;
     transition: .5s;
+}
+
+/*Media Queries*/
+@media (max-width: 999px) {
+    .navbar-collapse.pull-right {
+        width: 100%;
+        background: #fff;
+    }
 }
