--- a/partials/footer.html
+++ b/partials/footer.html
@@ -1,18 +1,47 @@
-<div class="clearfix container">
-    <div class="row">
-        <div class="col-md-6 col-sm-6 col-xs-12">
-            <div class="copyright">
-                <p>©Copyright 2017</p>
+<footer id="footer">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-5 col-sm-6">
+                <h5>Connect</h5>
+                <ul class="connect">
+                    <li><a href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                    <li><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="#" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+                    <li><a href="#" target="_blank"><i class="fa fa-youtube-play"></i></a></li>
+                    <li><a href="#" target="_blank"><i class="fa fa-wikipedia-w"></i></a></li>
+                </ul>
+
+                <div class="clearfix"></div>
+                <div class="copyright">
+                    <p>© Copyright 2017 by FaisalNeelambra.com. All rights reserved. </p>
+                    <!--<p><a href="#"> Privacy Policy - Terms and Conditions </a>  </p>-->
+                    <p> Website developed by <a href="http://machinser.com/" target="_blank"> Machinser Technologies</a> </p>
+                </div>
+            </div>
+
+            <div class="col-md-3 col-sm-6">
+                <h5>useful links</h5>
+                <ul class="usefulLinks">
+                    <li ng-click="gotoAnchor('home')"><a>Home</a></li>
+                    <li ng-click="gotoAnchor('profile')"><a>Profile</a></li>
+                    <li ng-click="gotoAnchor('employment')"><a>Employment</a></li>
+                    <li ng-click="gotoAnchor('gallery')"><a>Photo Gallery</a></li>
+                    <li ng-click="gotoAnchor('career')"><a>Group Companies</a></li>
+                    <li ng-click="gotoAnchor('works')"><a>Contact</a></li>
+                </ul>
+            </div>
+
+            <div class="col-md-4 col-sm-6 hidden-xs">
+                <h5>Quick Contact</h5>
+                <ul class="contact">
+                   <li>Luxuria, G Floor,</li>
+                   <li>Sahara Centre, Al Nahda Street,</li>
+                   <li>Sharjah, UAE</li>
+                   <li>Tel (Office) : +971 2 1234567</li>
+                   <li>Direct : +971 2 1234567</li>
+                   <li>E-mail : <a href="#">faisalneelambra@gmail.com</a></li>
+                </ul>
             </div>
         </div>
-        <div class="col-md-6 col-sm-6 col-xs-12">
-            <ul class="social">
-                <li>Follow Us</li>
-                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-            </ul>
-        </div>
     </div>
-</div>
+</footer>
