--- a/partials/employment.html
+++ b/partials/employment.html
@@ -9,8 +9,8 @@
                     <div class="icon-plain-msmall right text-orange-4"><i class="fa fa-address-card text-yellow-4"></i></div>
                     <div class="text-box-left less-padding-1">
                         <h5 class="uppercase less-mar2">Managing Director</h5>
-                        <p><span class="text-orange-4">Present</span> - Luxuria</p>
-                        <p class="paddtop1">Lorem ipsum dolor sit amet consectetuer adipiscing elit Sus Aliquam ornare hendrerit augue. </p>
+                        <p><span class="text-orange-4">Present</span> - Luxuria, Abu Dhabi</p>
+                        <!--<p class="paddtop1">Lorem ipsum dolor sit amet consectetuer adipiscing elit Sus Aliquam ornare hendrerit augue. </p>-->
                     </div>
                 </div>
             </div>
@@ -19,8 +19,8 @@
                     <div class="icon-plain-msmall right text-orange-4"><i class="fa fa-address-card text-yellow-4"></i></div>
                     <div class="text-box-left less-padding-1">
                         <h5 class="uppercase less-mar2">Managing Director</h5>
-                        <p><span class="text-orange-4">2014 - Present</span> - D' SIGN INTERIOR</p>
-                        <p class="paddtop1">Lorem ipsum dolor sit amet consectetuer adipiscing elit Sus Aliquam ornare hendrerit augue. </p>
+                        <p><span class="text-orange-4">2014 - Present</span> - D' SIGN INTERIOR, Fujairah</p>
+                        <!--<p class="paddtop1">Lorem ipsum dolor sit amet consectetuer adipiscing elit Sus Aliquam ornare hendrerit augue. </p>-->
                     </div>
                 </div>
             </div>
@@ -31,7 +31,7 @@
                     <div class="text-box-left less-padding-1">
                         <h5 class="uppercase less-mar2">Business Development Manager</h5>
                         <p><span class="text-orange-4">2011 - Present</span> - Time House Company</p>
-                        <p class="paddtop1">Lorem ipsum dolor sit amet consectetuer adipiscing elit Sus Aliquam ornare hendrerit augue. </p>
+                        <!--<p class="paddtop1">Lorem ipsum dolor sit amet consectetuer adipiscing elit Sus Aliquam ornare hendrerit augue. </p>-->
                     </div>
                 </div>
             </div>
@@ -40,8 +40,8 @@
                     <div class="icon-plain-msmall right text-orange-4"><i class="fa fa-address-card text-yellow-4"></i></div>
                     <div class="text-box-left less-padding-1">
                         <h5 class="uppercase less-mar2">Team Leader</h5>
-                        <p><span class="text-orange-4">2005 - 2010</span> - Bridgeway Group</p>
-                        <p class="paddtop1">Lorem ipsum dolor sit amet consectetuer adipiscing elit Sus Aliquam ornare hendrerit augue. </p>
+                        <p><span class="text-orange-4">2005 - 2010</span> - Bridgeway Group, Dubai</p>
+                        <!--<p class="paddtop1">Lorem ipsum dolor sit amet consectetuer adipiscing elit Sus Aliquam ornare hendrerit augue. </p>-->
                     </div>
                 </div>
             </div>
