--- a/partials/profile.html
+++ b/partials/profile.html
@@ -6,20 +6,17 @@
                 <div class="col-md-12 text-left nopadding"><img src="" alt=""></div>
                 <div class="clearfix"></div>
                 <br>
-                <!--<h3>Mr. Faisal Neelambra</h3>-->
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Suspendisse et justo. Praesent mattis commodo augue.
-                    Aliquam ornare hendrerit augue. Cras tellus. In pulvinar lectus a est. Curabitur eget orci. Cras laoreet
-                    ligula. Etiam sit amet dolor. Vestibulum ante ipsum primis in faucibus orci .</p>
+                <p>Managing Director of <strong>Luxuria</strong>, one of the best retail brand which has grown to a chain of retail stores locating across the popular destinations in UAE. His business chain includes <strong>D'SIGN INTERIORS</strong> and <strong>Amigos Exhibhitions LLC.</strong></p>
                 <br>
                 <ul class="personal-info">
                     <li> <i class="fa fa-calendar"></i> Birthdate : 05/05/1982</li>
-                    <li> <i class="fa fa-phone"></i> Phone : +971 2 1234567/li>
-                    <li> <i class="fa fa-envelope"></i> Email : faisalneelambra@gmail.com</li>
+                    <li> <i class="fa fa-phone"></i> Phone : +971 50 3476 100 </li>
+                    <li> <i class="fa fa-envelope"></i> Email : faisal@neelambra.com</li>
                     <li> <i class="fa fa-globe"></i> Website : faisalneelambra.com</li>
                 </ul>
             </div>
             <div class="col-md-6 col-sm-12 col-xs-12 bmargin" style="max-height: 350px; overflow: hidden">
-                <img src="css/images/profile-pic.png" alt="" class="img-responsive">
+                <img src="https://mail.google.com/mail/u/0/?ui=2&ik=2df0956b6b&view=fimg&th=15cf3aad3cfb70a9&attid=0.5&disp=inline&safe=1&attbid=ANGjdJ_d9g7Ks8qKafNDiRWnxYFgsSUSrKyX2GwBs8VcGw4C5dr4jmJcu6UvJItlh-DsORenUMt01feXGmCNIvhEFhFEPk-FuaQH4Af5y2o1mpPLnreWR_JW7py5VgM&ats=1498793518802&rm=15cf3aad3cfb70a9&zw&sz=w1440-h800" alt="" class="img-responsive">
             </div>
         </div>
     </div>
