--- a/partials/companies.html
+++ b/partials/companies.html
@@ -1,4 +1,4 @@
-<section id="companies" class="sec-padding section-light">
+<section id="companies" class="sec-padding">
     <div class="container">
         <div class="row">
             <h3 class="section-title-5 michroma uppercase less-mar2 text-center">GROUP COMPANIES</h3>
